Fix commit endpoint
