# docs/swagger.yaml
@@ -198,6 +198,48 @@ paths:
       summary: Get DNS record for a specific subdomain
       tags:
       - domain
+  /v1/domain/{domain}/commit:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: Domain
+        in: path
+        name: domain
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "429":
+          description: Too Many Requests
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      summary: Commit DNS changes
+      tags:
+      - domain
   /v1/domain/{domain}/info:
     get:
       parameters:
